# pseudolocalize

./: Cargo.toml  README.md
src/: bin.rs  lib.rs  percent.rs  pseudolocalizer.rs  transform.rs
