[package]
name = "pseudolocalize"
version = "0.2.0"
authors = ["Joël J. Présent <36854931+joeljpresent@users.noreply.github.com>"]
edition = "2018"
description = "Pseudolocalization crate for Rust."
repository = "https://github.com/joeljpresent/pseudolocalize"
readme = "README.md"
keywords = ["pseudolocalization"]
categories = ["Internationalization (i18n)", "Text processing"]
license = "MIT"
