[package]
name = "pseudolocalize"
version = "0.3.1"
authors = ["Joël J. Présent <36854931+joeljpresent@users.noreply.github.com>"]
edition = "2018"
description = "Pseudolocalization crate for Rust."
documentation = "https://docs.rs/pseudolocalize"
repository = "https://github.com/joeljpresent/pseudolocalize"
readme = "README.md"
keywords = ["pseudolocalization"]
categories = ["internationalization", "text-processing"]
license = "MIT"
